; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_test_aes128gcm.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/t/extr_picotls.c_test_aes128gcm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx = common dso_local global i32 0, align 4
@PTLS_CIPHER_SUITE_AES_128_GCM_SHA256 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_aes128gcm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_aes128gcm() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @ctx, align 4
  %4 = load i32, i32* @PTLS_CIPHER_SUITE_AES_128_GCM_SHA256, align 4
  %5 = call i32* @find_cipher(i32 %3, i32 %4)
  store i32* %5, i32** %1, align 8
  %6 = load i32, i32* @ctx, align 4
  %7 = load i32, i32* @PTLS_CIPHER_SUITE_AES_128_GCM_SHA256, align 4
  %8 = call i32* @find_cipher(i32 %6, i32 %7)
  store i32* %8, i32** %2, align 8
  %9 = load i32*, i32** %1, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @test_ciphersuite(i32* %9, i32* %10)
  %12 = load i32*, i32** %1, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @test_aad_ciphersuite(i32* %12, i32* %13)
  ret void
}

declare dso_local i32* @find_cipher(i32, i32) #1

declare dso_local i32 @test_ciphersuite(i32*, i32*) #1

declare dso_local i32 @test_aad_ciphersuite(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
